add user avatars, login errors, improve poll cards

--- a/app/containers/login/Login.scss
+++ b/app/containers/login/Login.scss
@@ -6,3 +6,19 @@ div.loginForm {
     margin-bottom: 20px;
   }
 }
+.error {
+  color: red;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.icon {
+  font-size: 2rem;
+  position: relative;
+  top: 5px;
+  margin: 5px;
+}
+
+.button {
+  margin-top: 10px;
+}
