--- a/app/containers/login/Login.scss
+++ b/app/containers/login/Login.scss
@@ -1,3 +1,5 @@
+@import "~react-toolbox/lib/colors";
+
 div.loginForm {
   margin: 2.4rem;
   max-width: 600px;
@@ -7,7 +9,7 @@ div.loginForm {
   }
 }
 .error {
-  color: red;
+  color: $palette-red-a400;
   text-align: center;
   margin: 0 auto;
 }
