load static files from webroot

--- a/app/index.ejs
+++ b/app/index.ejs
@@ -56,7 +56,7 @@
 <% } %>
 
 <% for (var chunk in htmlWebpackPlugin.files.chunks) { %>
-<script src="<%= htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
+<script src="<%= '' + htmlWebpackPlugin.files.chunks[chunk].entry %>"></script>
 <% } %>
 
 <% if (htmlWebpackPlugin.options.devServer) { %>
