add view users polls, font awesome

--- a/app/containers/login/Login.scss
+++ b/app/containers/login/Login.scss
@@ -24,3 +24,16 @@ div.loginForm {
 .button {
   margin-top: 10px;
 }
+
+.socialButtons {
+  margin-top: 40px;
+
+  a {
+    display: block;
+    margin-top: 20px;
+    i {
+      margin-right: 10px;
+      color: black;
+    }
+  }
+}
